# regex-evaluation

./: .gitignore  .gitmodules  Dockerfile  README.md  research-manual.md  settings.gradle
data/: README.md
data/regex-composition-bench/regexlib/: test_suites.ndjson
data/regex-reuse-database/: README.md
evaluation/: build.gradle  build.gradle.kts
modules/: README.md
modules/evaluator/: Dockerfile  README.md  settings.gradle.kts
modules/evaluator/dk.brics.automaton/: .gitignore  build.gradle  pom.xml  settings.gradle
modules/evaluator/docs/: evaluation-tasks.md
modules/evaluator/evaluation/: build.gradle.kts
modules/extractor/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  extractor.env
modules/extractor/db/: Cargo.toml  README.md
modules/extractor/db/src/: db_client.rs  db_merge.rs  dfa_db.rs  is_metachar_regex.rs  lib.rs  regex_filter.rs
modules/extractor/db/src/db_client/: package_spec_queries.rs  regex_entity_queries.rs  test_suites.rs
modules/extractor/db/src/sql/: characteristic queries v2.sql  characteristics_query.sql  count_regex_categories.sql  create_tables.sql  dfa_table.sql  insert_regex_source_usage.sql  insert_regex_subject.sql  load_project_spec_repos.sql  merge_dbs.sql  merge_dbs_v2.sql  pull_test_suites.sql
modules/extractor/docs/: evaluation_pipeline.md  overview.md  useful_oneliners.md
modules/extractor/driver/: Cargo.toml  README.md
modules/extractor/driver/src/: args.rs  commands.rs  extraction.rs  extraction_results.rs  main.rs  report.rs  setup_extractors.rs
modules/extractor/driver/src/commands/: db_combine.rs  ecosystem_dump.rs  evaluate.rs  extract_dir.rs  full_extract.rs  gen_dfa_db.rs  gen_test_suites.rs  report_gen.rs  sample_unique_projects.rs
modules/extractor/driver/src/extraction/: process_packages.rs  save_execution_results.rs
modules/extractor/dynamic-extraction/: Cargo.toml  README.md
modules/extractor/dynamic-extraction/src/: custom_node_args.rs  dynamic_extractor_manager.rs  extract_usages.rs  fake_home_config.rs  lib.rs  preprocess.rs  regexp_monkey_patch.rs
modules/extractor/dynamic-extraction/src/dynamic_extractor_manager/: config.rs  java.rs  js.rs  utils.rs
modules/extractor/dynamic-extraction/src/dynamic_extractor_manager/java/: java_home_config.rs  pom_info.rs  version_info.rs
modules/extractor/ecosystems-dump/: Cargo.toml
modules/extractor/evaluation/: Cargo.toml  README.md
modules/extractor/evaluation/benches/: regex_db_evaluation.rs
modules/extractor/evaluation/src/: lib.rs  query_test_suites.rs
modules/extractor/evaluation/src/sql/: select_evaluation_regexes.sql
modules/extractor/reporting/: Cargo.toml
modules/extractor/reporting/report_specs/: reports.toml
modules/extractor/reporting/src/: lib.rs  prepare.rs  pull_report.rs  report.rs  report_def.rs  util.rs
modules/extractor/reporting/src/sql/: characteristics_tables.sql
modules/extractor/shared/: Cargo.toml  README.md
modules/extractor/shared/src/: clean_up_guard.rs  cloc.rs  error.rs  lib.rs  package_spec.rs  processing_result.rs  regex_entity.rs  regex_metachars.rs  repo_utils.rs  subprocess_utils.rs  test_case.rs  traverser.rs  usage.rs
modules/extractor/shared/src/traverser/: filter.rs
modules/extractor/shared/src/usage/: subject.rs
modules/extractor/static-extraction/: Cargo.toml  README.md
modules/extractor/static-extraction/src/: extract_package.rs  extractor.rs  lib.rs
modules/extractor/static-extraction/src/extractor/: connection.rs  extractor_info.rs  manager.rs
modules/extractor/tools/: Dockerfile  README.md  (+1 more)
modules/extractor/tools/python-static-extractor-v2/: Cargo.toml
modules/extractor/tools/python-static-extractor-v2/src/: args.rs  main.rs  py_conversion.rs  python_static_extractor.py
modules/helpfulness_score/: README.md  helpfulness_score.py
modules/make_plots/: README.md  make_plots.py
modules/regex_semantic_sim/: README.md  __init__.py  regex_semantic_sim.py
modules/regex_syntactic_sim/: PCRELexer.py  PCREListener.py  PCREParser.py  PCREVisitor.py  README.md  __init__.py  ast.py  distance.py
modules/run_analysis/: README.md  analyze_accuracies.py  analyze_helpfulness_score.py  analyze_semantic_similarities.py  analyze_syntactic_similarities.py  requirements.txt
modules/run_strategies/: README.md  requirements.txt  run_llms.py  run_reuse_by_example.md  run_synthesizers.py
(+261 files in other folders)
