[package]
name = "dynamic-extraction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
log = "0.4.21"
subprocess = "0.2.9"
rand = "0.8.5"
regex = "1.10.4"
libxml = { version = "0.3.3" }