[package]
name = "evaluation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"shared" = { path = "../shared" }
"db" = { path = "../db" }
regex = "1.10.4"
regex-automata = "0.4.6"
serde = "1.0.197"
rusqlite = { version = "0.31.0", features = ["blob"] }
log = "0.4.21"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "regex_db_evaluation"
harness = false