[package]
name = "reporting"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
db = { path = "../db" }

rusqlite = { version = "0.31.0", features = ["serde_json", "blob", "column_decltype", "functions"] }
log = "0.4.21"
polars = { version = "0.40.0", features = ["serde", "polars-io"] }
rust_xlsxwriter = { version = "0.66.0", features = ["polars"] }
serde = "1.0.203"