[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
subprocess = "0.2.9"
thiserror = "1.0.57"
walkdir = "2.4.0"
log = "0.4.21"
regex = "1.10.4"
regex-automata = "0.4.6"