[package]
name = "static-extraction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"shared" = { path = "../shared" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
subprocess = "0.2.9"
log = "0.4.20"
env_logger = "0.11.2"