[package]
name = "python-static-extractor-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
log = "0.4.21"
env_logger = "0.11.3"
shared = { path = "../../shared" }
serde_json = "1.0.117"